fixes: jumpy page, tabs - fix page looking jumpy when scroll bar appear/disappear - update tabs styles for content

--- a/next-client/app/globals.css
+++ b/next-client/app/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Fix jumpy page when scroll appear */
+html {
+  overflow-y: scroll;
+}
